# p2sh

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: README.md
docs/language/: README.md  builtins-packet.md  builtins.md  data-model.md  expression-precedence.md  filters.md  keywords.md  operators.md  program.md  property.md
docs/tutorial/: README.md  control-flow.md  filters.md  introduction.md
examples/: fibonacci-iterative.p2  fibonacci-recursive.m2  fibonacci-recursive.p2  formatted-output.p2  map-reduce.mky  map-reduce.p2
examples/algorithms/: fibonacci-iterative.p2  sorting-quick.p2
examples/file-io/: copy.p2
examples/filters/: eth-bidi-flows.p2  eth-uni-flows.p2  packet-proto-summary.p2  packet-summary.p2
examples/packet-parsing/: packet-edit.p2  packet-parser.p2  pcap-parser.p2  pcap-read-all.p2  pcap-read-next.p2  pcap-read-stdin-all.p2  pcap-read-stdin-next.p2  pcap-summary.p2  read-all.p2  read-next.p2  read-stdin-all.p2  read-stdin-next.p2
src/: main.rs
src/builtins/: functions.rs  mod.rs  pcap.rs  print.rs  tests.rs  variables.rs
src/cliargs/: mod.rs
src/code/: definitions.rs  mod.rs  opcode.rs  prop.rs  tests.rs
src/common/: mod.rs  object.rs
src/compiler/: error.rs  mod.rs  symtab.rs  symtab_test.rs  tests.rs
src/evaluator/: tests.rs
src/object/: array.rs  error.rs  file.rs  func.rs  hmap.rs  mod.rs
src/parser/: mod.rs  precedence.rs  rules.rs  tests.rs
src/prompt/: mod.rs
src/repl/: completion.rs  mod.rs  prompt.rs
src/scanner/: mod.rs  tests.rs  token.rs
src/vm/: error.rs  frame.rs  mod.rs  (+4 more)
(+25 files in other folders)
