[package]
name = "p2sh"
description = "The p2sh Programming language"
version = "0.3.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
byteorder = "1.4.3"
dialoguer = {version = "0.11.0", features = ["history", "completion"]}

[features]
debug_print_code = []
debug_trace_execution = []
# default = ["debug_trace_execution"]
