[package]
name = "p2sh"
version = "0.4.3"
edition = "2021"
authors = ["Binoy Jayan <binoyjayan@gmail.com>"]
description = "The p2sh Programming language interpreter"
repository = "https://github.com/binoyjayan/p2sh"
documentation = "https://docs.rs/p2sh"
keywords = ["bytecode", "compiler", "interpreter", "packet", "processing"]
license = "MIT"
readme = "README.md"

[dependencies]
lazy_static = "1.4.0"
byteorder = "1.4.3"
dialoguer = {version = "0.11.0", features = ["history", "completion"]}
rand = "0.8.5"
clap = {version= "4.4.13", features = ["derive"]}

[features]
debug_print_code = []
debug_trace_execution = []
# default = ["debug_trace_execution"]
